--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - anaconda=2020.11
   - pip
   - pip:
+    - ipykernel
     - jupyter-book>=0.11.0,<0.12.0
     - sphinxext-rediraffe
     - sphinx-multitoc-numbering
