--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,20 @@
 name: lecture-datascience
 channels:
-  - default
+  - conda-forge
+  - anaconda
+  - defaults
 dependencies:
   - python=3.8
   - anaconda=2020.11
-  - pip
-  - pip:
+  - conda:
+    - python-graphviz
+    - fiona
+    - geopandas  
     - jupyter-book>=0.11.0,<0.12.0
     - sphinxext-rediraffe
     - sphinx-multitoc-numbering
-    - sphinx-exercise
     - joblib
     - interpolation
-    - sphinx-tojupyter
-    - fiona 
-    - geopandas 
     - pyLDAvis >= 3.3.0
     - gensim 
     - folium 
@@ -25,7 +25,6 @@ dependencies:
     - scikit-learn >= 0.24.0
     - bokeh
     - sphinxcontrib-bibtex
-    - quantecon-book-theme>=0.2.5,<0.3.0
     - nltk
     - seaborn
     - patsy
@@ -33,8 +32,12 @@ dependencies:
     - statsmodels
     - quantecon
     - openpyxl
-    - pandas_datareader
     - plotly
     - lxml
-  - conda:
-    - python-graphviz
+    - pandas_datareader
+    - jedi >= 0.16
+  - pip
+  - pip:
+    - sphinx-tojupyter
+    - sphinx_exercise
+    - quantecon-book-theme >=0.2.5,<0.3.0      
